<resources>
    <string name="app_name">UdacityAppPortfolio</string>
    <string name="action_settings">Settings</string>
    <string name="button_label_spotify_streamer">Spotify Streamer</string>
    <string name="button_label_scores_app">Scores App</string>
    <string name="button_label_library_app">Library App</string>
    <string name="button_label_build_it_bigger">Build It Bigger</string>
    <string name="button_label_xyz_reader">XYZ Reader</string>
    <string name="button_label_capstone">Capstone: My Own App</string>
</resources>
