<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity"
        android:orientation="vertical">

    <Button
            android:id="@+id/button_spotify_streamer"
            android:text="@string/button_label_spotify_streamer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    <Button
            android:id="@+id/button_scores_app"
            android:text="@string/button_label_scores_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    <Button
            android:id="@+id/button_library_app"
            android:text="@string/button_label_library_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    <Button
            android:id="@+id/button_build_it_bigger"
            android:text="@string/button_label_build_it_bigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    <Button
            android:id="@+id/button_xyz_reader"
            android:text="@string/button_label_xyz_reader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    <Button
            android:id="@+id/button_capstone"
            android:text="@string/button_label_capstone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Button.Contrast"/>
</LinearLayout>
